--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>P&amp;ID Symbols - American National Standard by BVLtd</title>
+    <title>P&amp;ID Symbols - British Standard by BVLtd</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,19 +17,19 @@
   <body>
 
       <header>
-        <h1>P&amp;ID Symbols - American National Standard</h1>
-        <p>Set of symbols for Piping &amp; Instrumentation Diagrams based on the American National Standard</p>
+        <h1>P&amp;ID Symbols - British Standard</h1>
+        <p>Set of symbols for Piping &amp; Instrumentation Diagrams based on the British Standard</p>
       </header>
 
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/BVLtd/PID-Symbols-American-National-Standard" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/tree/master" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/BVLtd/PID-Symbols-American-National-Standard/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/BVLtd/PID-Symbols-American-National-Standard/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -39,41 +39,32 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p><strong>Welcome to Black &amp; Veatch's GitHub Page for the P&ID symbols.  This page provides some details on what the repository contains and how you can download and use it.</strong>
+</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The files published herewith are intended to provide a basis for developing a set of P&ID symbols based on the British Standard (1646 Part 3 dated 1984).  This set includes only the current symbols used by Black &amp; Veatch Limited in the UK for water industry related project work.  The attached files will allow a user to import the symbol artwork and create symbol components within the MicroStation environment.  Below is an explanation for each file type being published herewith:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<ol>
+  <li>MicroStation .dgn file – this file is a legend sheet containing each symbol from the cell libraries (.cel files) also being published.  This legend sheet can be opened and viewed in MicroStation.</li>
+  <li>Legend sheet as .pdf file – this file is a pdf version of (1) above.</li>
+  <li>MicroStation .cel files – These files contain the working drawing/artwork for each symbol and must be used in conjunction with MicroStation.  The .cel files must be “attached” to a drawing within MicroStation to allow the individual symbols to be placed on a drawing and/or manipulated (including creating intelligent components within Bentley OpenPlantPID).</li>
+</ol>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloading the Symbols</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The cell libraries can be downloaded as a compressed <a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/zipball/master"><span class="octicon octicon-link">zip</span></a> or a <a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/tarball/master"><span class="octicon octicon-link">tar</span></a> file format.  Along with the cell libraries, the compressed file also contains a legend sheet in pdf and dgn formats.
+If you prefer to view the files on the GitHub repository or would like to download individual library files then you can visit <a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/tarball/master"><span class="octicon octicon-link">the repository here</span></a>.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a class="anchor" href="#Feedback" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feedback</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>If you have a comment or a question about the contents of this repository, please visit <a href="https://github.com/BVLtd/PID-Symbols-BritishStandard/issues"><span class="octicon octicon-link"> the issues page</span></a> and let us know your thoughts.  Follow the “create an issue” link to add a question or a comment.  You will need a free GitHub account to be able to do this.  You can <a href="https://github.com/join"><span class="octicon octicon-link">create one here</span></a>.</p>
+
+
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/BVLtd">BVLtd</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p><img src="images/bvlogostacked.png" width="133" height="61" alt="Black &amp; Veatch Ltd.">  <br />Project maintained by <br /><a href="https://github.com/BVLtd">Black & Veatch Ltd.</a>  </p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
