--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>P&amp;ID Symbols - British Standard by BVLtd</title>
+    <title>P&amp;ID Symbols - British Standard by Black & Veatch Ltd.</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -39,7 +39,7 @@
         <ul></ul>
       </nav>
       <section>
-        <p><strong>Welcome to Black &amp; Veatch's GitHub Page for the P&ID symbols.  This page provides some details on what the repository contains and how you can download and use it.</strong>
+        <p><strong>Welcome to Black &amp; Veatch's <a href="https://github.com/BVLtd"><span class="octicon octicon-link">GitHub Page</span></a> for the P&ID symbols.  This page provides some details on what the repository contains and how you can download and use it.</strong>
 </p>
 
 <p>The files published herewith are intended to provide a basis for developing a set of P&ID symbols based on the American National Standard (ANSI/ISA-5.1-2009).  This set includes only the current symbols used by Black & Veatch Limited in the UK for water industry related project work.  The attached files will allow a user to import the symbol artwork and create symbol components within the MicroStation environment.  Below is an explanation for each file type being published herewith:</p>
