--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>P&amp;ID Symbols - British Standard by Black & Veatch Ltd.</title>
+    <title>P&amp;ID Symbols - ANSI/ISA by Black & Veatch Ltd.</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>P&amp;ID Symbols - American National Standard</h1>
-        <p>Set of symbols for Piping &amp; Instrumentation Diagrams based on the American National Standard</p>
+        <h1>P&amp;ID Symbols - ANSI/ISA</h1>
+        <p>Set of symbols for Piping &amp; Instrumentation Diagrams based on the ANSI/ISA</p>
       </header>
 
       <div id="banner">
